--- a/clash.yaml
+++ b/clash.yaml
@@ -5,7 +5,7 @@
 # Pop up window? Report at:
 # https://github.com/ignaciocastro/a-dove-is-dumb/issues
 # Or follow updates at https://a.dove.isdumb.one/telegram
-# Last update: 2026-02-23 07:13 UTC
+# Last update: 2026-02-23 17:12 UTC
 payload:
   - DOMAIN,ic.adobe.io
   - DOMAIN,cc-api-data.adobe.io
@@ -3536,3 +3536,4 @@ payload:
   - DOMAIN,x4lveg8u7v.adobestats.io
   - DOMAIN,ytusax0qaj.adobestats.io
   - DOMAIN,wzx3nh1vrk.lqn0m.adobestats.io
+  - DOMAIN,8y7e1z7z.xwk4b.adobestats.io
