--- a/clash.yaml
+++ b/clash.yaml
@@ -5,7 +5,7 @@
 # Pop up window? Report at:
 # https://github.com/ignaciocastro/a-dove-is-dumb/issues
 # Or follow updates at https://a.dove.isdumb.one/telegram
-# Last update: 2026-02-24 07:44 UTC
+# Last update: 2026-02-25 07:09 UTC
 payload:
   - DOMAIN,ic.adobe.io
   - DOMAIN,cc-api-data.adobe.io
@@ -3539,3 +3539,4 @@ payload:
   - DOMAIN,8y7e1z7z.xwk4b.adobestats.io
   - DOMAIN,fp077nj91.xwk4b.adobestats.io
   - DOMAIN,nk3etkofoq18.lqn0m.adobestats.io
+  - DOMAIN,74z242v3618g.lqn0m.adobestats.io
