--- a/clash.yaml
+++ b/clash.yaml
@@ -5,7 +5,7 @@
 # Pop up window? Report at:
 # https://github.com/ignaciocastro/a-dove-is-dumb/issues
 # Or follow updates at https://a.dove.isdumb.one/telegram
-# Last update: 2026-02-26 07:37 UTC
+# Last update: 2026-02-27 07:22 UTC
 payload:
   - DOMAIN,ic.adobe.io
   - DOMAIN,cc-api-data.adobe.io
@@ -3541,3 +3541,4 @@ payload:
   - DOMAIN,nk3etkofoq18.lqn0m.adobestats.io
   - DOMAIN,74z242v3618g.lqn0m.adobestats.io
   - DOMAIN,tn1ylf9bs.lqn0m.adobestats.io
+  - DOMAIN,f9zukyoc5j.lqn0m.adobestats.io
